# importlio-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build-and-push.sh  build-docker.sh  docker-compose.yml  prd.md  pyproject.toml  render.yaml  requirements.txt  run_importfolio.bat
.github/workflows/: docker-publish.yml
static/css/: style.css
static/js/: script.js
templates/: index.html  results.html
tests/: test_app.py
