[project]
name = "importfolio"
version = "0.1.0"
description = "Vietnam stock portfolio optimizer web app"
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10.11"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=5.24.1",
    "pyportfolioopt>=1.5.6",
    "requests>=2.31.0", # Required for Docker health check endpoint
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "vnstock>=3.2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

